# kotlin-multiplatform-jni

./: .gitignore  B64Tests.kt  CMakeLists.txt  NativeBase64.kt  NativeBase64Jvm.kt  README.md  base64.h  base64_jni.cpp  build-native.sh  settings.gradle.kts
android/: build.gradle.kts
jvm/: build.gradle.kts
lib/src/main/kotlin/at/phatbl/kotlin/multiplatform/: Library.kt
lib/src/test/kotlin/at/phatbl/kotlin/multiplatform/: LibraryTest.kt
